titulo de la segunda parte
se agrego el titulo

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 
         </div>
     </div>
+
+
+    <div class="text-center">
+        <div class="class-text">
+            <p>Our Services</p>
+        </div>
+    </div>
     
 
 
