--- a/index.html
+++ b/index.html
@@ -48,44 +48,54 @@
     </div>
     </div>
 
-    <div class="ogi-fondo">
+    <div class="container">
+        <div class="container-lectus">
+            <div class="col-sm-12">
 
-        <img src="img/fondo.jpg" alt=""
-            style="max-width: 680px;margin-left: -1px;margin-top: -660px;position: absolute;">
+                <p>A posuere scelerisque gravida facilisi parturient magna urna
+                    donec parturient per augue a amet quam nullam a ad a.
+                    Parturient velit imperdiet in suspendisse eget a parturient
+                    adipiscing penatibus convallis himenaeos felis torquent
+                    facilisi elementum a penatibus suscipit aliquam.</p>
+                <p> Porta at at suspendisse dolor fames ullamcorper cum id per
+                    suspendisse a dignissim eu dapibus platea turpis augue mi
+                    proin lorem morbi sapien facilisis lectus.
+                </p>
 
-    </div>
-    <div class="texto1" style="font-family: 'Montserrat', sans-serif;">
-        <p style="margin-top: -17em;margin-left: 2em;color: #FFFFFF;position: absolute;font-size: xx-large;"> About Us
-        </p>
-    </div>
-
-    <div class="container-texto2">
-        <div class="col-sm-4"
-            style="  font-family: 'Open Sans'; margin-left: 4em;font-size: 15px;margin-top: -450px;color:#FFFFFF;position: absolute; letter-spacing: 0.5px;line-height: 26px;">
-
-            <p>A posuere scelerisque gravida facilisi parturient magna urna
-                donec parturient per augue a amet quam nullam a ad a.
-                Parturient velit imperdiet in suspendisse eget a parturient
-                adipiscing penatibus convallis himenaeos felis torquent
-                facilisi elementum a penatibus suscipit aliquam.</p>
-            <p> Porta at at suspendisse dolor fames ullamcorper cum id per
-                suspendisse a dignissim eu dapibus platea turpis augue mi
-                proin lorem morbi sapien facilisis lectus.
-            </p>
+            </div>
         </div>
-    </div>
- <div class="container">
-     <div class="time-line">
-     <p>Timeline</p>
-     </div>
-
- </div>
 
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <div class="contenido" style="margin-top: 9em;">
+            <div class="timeline">
+                <h3>TimeLine</h3>
+                <p>A posuere scelerisque gravida facilisi parturient magna urna donec parturient per augue a amet quam
+                    nullam a ad a. Parturient velit imperdiet in suspendisse eget a parturient adipiscing penatibus
+                    convallis himenaeos felis torquent facilisi elementum a penatibus suscipit aliquam.</p>
+                <p>
+                    Porta at at suspendisse dolor fames ullamcorper cum id per suspendisse a dignissim eu dapibus platea
+                    turpis augue mi proin lorem morbi sapien facilisis lectus.</p>
+            </div>
+
+        </main>
+
+
+
+
+
+
+
+
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
+
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
