se termino la tercera parte
se realizo la linea de tiempo

--- a/index.html
+++ b/index.html
@@ -42,51 +42,122 @@
         </div>
     </main>
 
-    <div class="img-reunion">
-        <img src="img/reunion.jpg" alt="">
-    </div>
 
 
-    <div class="img-reun">
-        <img src="img/fondo.jpg" alt="">
-    </div>
+   
 
-
-    <div class="texto1">
-        <p> About Us </p>
-    </div>
-
-    <div class="container">
-        <div class="container-lectus">
+    <div class="container-time">
+        <div class="time-text">
             <div class="col-sm-12">
 
+
+                <h2>Timeline</h2>
                 <p>A posuere scelerisque gravida facilisi parturient magna urna
                     donec parturient per augue a amet quam nullam a ad a.
                     Parturient velit imperdiet in suspendisse eget a parturient
                     adipiscing penatibus convallis himenaeos felis torquent
                     facilisi elementum a penatibus suscipit aliquam.</p>
-                <p> Porta at at suspendisse dolor fames ullamcorper cum id per
+                <p>Porta at at suspendisse dolor fames ullamcorper cum id per
                     suspendisse a dignissim eu dapibus platea turpis augue mi
-                    proin lorem morbi sapien facilisis lectus.
-                </p>
-
+                    proin lorem morbi sapien facilisis lectus.</p>
             </div>
         </div>
-
-
-
-
     </div>
 
-
-    <div class="text-center">
-        <div class="class-text">
-            <p>Our Services</p>
+    <div class="container-time-line">
+        <img src="img/Timeline.jpg" alt="">
+    </div>
+    <div class="linea-tiempo">
+        <div class="col-sm-12">
+        <div class="start">
+            <h6>2003</h6>
+            <div class="important">
+               <p>Started</p> 
+            </div>
+        </div>
+        <div class="date-one">
+            <h6>2006</h6>
+            <div class="one-line">
+               <P>Important Date One</P> 
+            </div>
+        </div>
+        <div class="date-two">
+            <h6>2010</h6>
+            <div class="descripcion-two">
+                <p>Important Date Two</p> 
+            </div>
+        </div>
+        <div class="current">
+            <h6>2016</h6>
+            <div class="finish">
+               <p>Current Time</p> 
+                </div>
+            </div>
         </div>
     </div>
 
 
- </div>
+
+
+
+
+
+    <div class="container-third-segment">
+        <div class="phase third-part">
+            <p>Our Services</p>
+            <ul>
+                <li> <img src="img/folder.jpg" alt="">
+                    <b>Consectetur vestibulum</b>
+                    <p>Consectetur vestibulum maecenas curabitur
+                        hac felis vestibulum urna velit parturient
+                        suspendisse a ad lacus mauris</p>
+
+                </li>
+                <li> <img src="img/Smile.jpg" alt="">
+                    <b>Consectetur vestibulum</b>
+                    <p>Consectetur vestibulum maecenas curabitur
+                        hac felis vestibulum urna velit parturient
+                        suspendisse a ad lacus mauris</p>
+                </li>
+
+                <li> <img src="img/Hearth.jpg" alt="">
+                    <b>Consectetur vestibulum</b>
+                    <p>Consectetur vestibulum maecenas curabitur
+                        hac felis vestibulum urna velit parturient
+                        suspendisse a ad lacus mauris</p>
+
+                </li>
+                <li> <img src="img/Shape.jpg" alt="">
+                    <b>Consectetur vestibulum</b>
+                    <p>Consectetur vestibulum maecenas curabitur
+                        hac felis vestibulum urna velit parturient
+                        suspendisse a ad lacus mauris</p>
+
+                </li>
+                <li> <img src="img/Joystick.jpg" alt="">
+                    <b>Consectetur vestibulum</b>
+                    <p>Consectetur vestibulum maecenas curabitur
+                        hac felis vestibulum urna velit parturient
+                        suspendisse a ad lacus mauris</p>
+                </li>
+
+                <li> <img src="img/phone.jpg" alt="">
+                    <b>Consectetur vestibulum</b>
+                    <p>Consectetur vestibulum maecenas curabitur
+                        hac felis vestibulum urna velit parturient
+                        suspendisse a ad lacus mauris</p>
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
+
+
+
+
+
+
 
 
     <!-- JavaScript Bundle with Popper -->
@@ -95,9 +166,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
 </html>
