--- a/index.html
+++ b/index.html
@@ -72,7 +72,29 @@
 
 
 
+    <div class="container-tree-section" style="margin-top: 25em;">
+        <div class="section four-section">
+            <img src="img/bitmap.jpg" alt="">
+        </div>
 
+        <div class="section hiring">
+            <div class="col-sm-8 offset-sm-1">
+                <div class="row">
+                    <p>
+                        A posuere scelerisque gravida facilisi parturient magna urna donec parturient per augue a amet
+                        quam
+                        nullam a ad a. Parturient velit imperdiet in suspendisse eget a parturient adipiscing penatibus
+                        convallis himenaeos felis torquent facilisi elementum a penatibus suscipit aliquam.
+                    </p>
+
+                    <p>Porta at at suspendisse dolor fames ullamcorper cum id per suspendisse a dignissim eu dapibus
+                        platea
+                        turpis augue mi proin lorem morbi sapien facilisis lectus.</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
