--- a/index.html
+++ b/index.html
@@ -62,19 +62,16 @@
                 </div>
             </div>
         </div>
+
         <div class="section second-section">
-
             <img src="img/reunion.jpg" alt="">
-
-
         </div>
     </div>
 
 
-
     <div class="container-tree-section" style="margin-top: 25em;">
         <div class="section four-section">
-            <img src="img/bitmap.jpg" alt="">
+            <img src="img/Bitmap2.jpg" class="img-fluid" alt="">
         </div>
 
         <div class="section hiring">
