--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <header class="header" >
+    <header class="header">
         <div class="container logo-nav-container">
             <h5><b>Company Name</b></h5>
             <nav class="navigation">
@@ -47,7 +47,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-8 offset-sm-1">
-
+                        <h1>About Us</h1>
                         <p>A posuere scelerisque gravida facilisi parturient magna urna
                             donec parturient per augue a amet quam nullam a ad a.
                             Parturient velit imperdiet in suspendisse eget a parturient
@@ -71,12 +71,13 @@
 
     <div class="container-tree-section" style="margin-top: 25em;">
         <div class="section four-section">
-            <img src="img/Bitmap2.jpg" class="img-fluid" alt="">
+            <img src="img/Bitmap2.jpg" alt="">
         </div>
 
         <div class="section hiring">
             <div class="col-sm-8 offset-sm-1">
                 <div class="row">
+                    <h1>We`re Hiring</h1>
                     <p>
                         A posuere scelerisque gravida facilisi parturient magna urna donec parturient per augue a amet
                         quam
@@ -93,11 +94,22 @@
         </div>
     </div>
 
+    <div class="container-five-section">
+        <div class="section final-section">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-8 offset-sm-1">
+                        <p>Contact Us</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+            <div class="section imagen-section">
+                <img src="img/Map.jpg" alt="" class="img-fluid">
+            </div>
 
-
-
-
+    </div>
 
 
 
