--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
                 <div class="row">
                     <div class="col-sm-8 offset-sm-1">
                         <p>Contact Us</p>
+                      <form>
+                          <input type="text" placeholder="Name">
+
+                          <input type="email" placeholder="email">
+
+                         <input type="text" placeholder="message">
+
+                         <input type="button" value="Contact Us">
+                      </form>
+
+                         
+                      </form>
                     </div>
                 </div>
             </div>
