se corrigieron errores

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
 
-        <div class="container-tree-section" style="margin-top: 25em;">
+        <div class="container-tree-section" >
             <div class="section four-section">
                 <img src="img/Bitmap2.jpg" alt="">
             </div>
