--- a/index.html
+++ b/index.html
@@ -69,7 +69,52 @@
     </div>
 
 
+    <div class="linea-tiempo">
+        <div class="momento">
+            <h3>2003</h3>
+            <div class="descripcion">
+                Started
+            </div>
+        </div>
+        <div class="momento">
+            <h3>2006</h3>
+            <div class="descripcion">
+                Important Date One
+            </div>
+        </div>
+        <div class="momento">
+            <h3>2010</h3>
+            <div class="descripcion">
+                Important Date Two
+            </div>
+        </div>
+        <div class="momento">
+            <h3>2016</h3>
+            <div class="descripcion">
+                Current Time
+            </div>
+        </div>
+    </div>
 
+    <div class="container-time2">
+        <div class="time-text">
+            <div class="col-sm-12">
+
+
+                <h2>Timeline</h2>
+                <p>A posuere scelerisque gravida facilisi parturient magna urna
+                    donec parturient per augue a amet quam nullam a ad a.
+                    Parturient velit imperdiet in suspendisse eget a parturient
+                    adipiscing penatibus convallis himenaeos felis torquent
+                    facilisi elementum a penatibus suscipit aliquam.</p>
+                <p>Porta at at suspendisse dolor fames ullamcorper cum id per
+                    suspendisse a dignissim eu dapibus platea turpis augue mi
+                    proin lorem morbi sapien facilisis lectus.
+                    proin lorem morbi sapien facilisis lectus.</p>
+
+            </div>
+        </div>
+    </div>
 
     
     <div class="container-list">
